02工程/03代码/Charity/trunk/ichari/www/LogFiles/2012-06-20.txt
^^^^^^^^^^^^$$$$$$$$$$$$^^^^^^^^^^^^$$$$$$$$$$$$^^^^^^^^^^^^--------2012-06-20 11:18:48,747 [8980] FATAL Ichari.Web.CharityController (null) - [Error]
System.Web.HttpCompileException (0x80004005): e:\ichari\02工程\03代码\Charity\trunk\ichari\www\Views\Charity\Index.cshtml(95): error CS1061: “Ichari.Web.ViewModel.CharityViewModel”不包含“IsSaveCookie”的定义，并且找不到可接受类型为“Ichari.Web.ViewModel.CharityViewModel”的第一个参数的扩展方法“IsSaveCookie”(是否缺少 using 指令或程序集引用?)
   在 Ichari.Web.BaseController.OnException(ExceptionContext filterContext) 位置 E:\ichari\02工程\03代码\Charity\trunk\ichari\Ichari.Web\Controller\BaseController.cs:行号 32
$$$$$$$$$$$$^^^^^^^^^^^^$$$$$$$$$$$$^^^^^^^^^^^^$$$$$$$$$$$$^^^^^^^^^^^^--------2012-06-20 11:23:27,190 [8304] FATAL Ichari.Web.AccountController (null) - [Error]
System.Exception: 措施发上来的肌肤
   在 Ichari.Web.BaseController.OnException(ExceptionContext filterContext) 位置 E:\ichari\02工程\03代码\Charity\trunk\ichari\Ichari.Web\Controller\BaseController.cs:行号 32
--------2012-06-20 11:24:07,905 [8304] FATAL Ichari.Web.AccountController (null) - [Error]
System.Exception: 措施发上来的肌肤
   在 Ichari.Web.BaseController.OnException(ExceptionContext filterContext) 位置 E:\ichari\02工程\03代码\Charity\trunk\ichari\Ichari.Web\Controller\BaseController.cs:行号 32
--------2012-06-20 11:24:19,188 [8384] FATAL Ichari.Web.AccountController (null) - [Error]
System.Exception: 措施发上来的肌肤
   在 Ichari.Web.BaseController.OnException(ExceptionContext filterContext) 位置 E:\ichari\02工程\03代码\Charity\trunk\ichari\Ichari.Web\Controller\BaseController.cs:行号 32
$$$$$$$$$$$$^^^^^^^^^^^^--------2012-06-20 11:24:54,105 [8508] FATAL Ichari.Web.AccountController (null) - [Error]
System.Exception: 措施发上来的肌肤
   在 Ichari.Web.BaseController.OnException(ExceptionContext filterContext) 位置 E:\ichari\02工程\03代码\Charity\trunk\ichari\Ichari.Web\Controller\BaseController.cs:行号 32
--------2012-06-20 11:25:06,435 [8924] FATAL Ichari.Web.AccountController (null) - [Error]
System.Exception: 措施发上来的肌肤
   在 Ichari.Web.BaseController.OnException(ExceptionContext filterContext) 位置 E:\ichari\02工程\03代码\Charity\trunk\ichari\Ichari.Web\Controller\BaseController.cs:行号 32
--------2012-06-20 11:25:17,040 [8924] FATAL Ichari.Web.AccountController (null) - [Error]
System.Exception: 措施发上来的肌肤
   在 Ichari.Web.BaseController.OnException(ExceptionContext filterContext) 位置 E:\ichari\02工程\03代码\Charity\trunk\ichari\Ichari.Web\Controller\BaseController.cs:行号 32
--------2012-06-20 11:26:03,467 [8924] FATAL Ichari.Web.AccountController (null) - [Error]
System.Exception: 措施发上来的肌肤
   在 Ichari.Web.BaseController.OnException(ExceptionContext filterContext) 位置 E:\ichari\02工程\03代码\Charity\trunk\ichari\Ichari.Web\Controller\BaseController.cs:行号 32
$$$$$$$$$$$$^^^^^^^^^^^^--------2012-06-20 11:26:31,371 [8656] FATAL Ichari.Web.AccountController (null) - [Error]
System.Exception: asdfaf
   在 Ichari.Web.BaseController.OnException(ExceptionContext filterContext) 位置 E:\ichari\02工程\03代码\Charity\trunk\ichari\Ichari.Web\Controller\BaseController.cs:行号 32
--------2012-06-20 11:28:38,908 [8656] FATAL Ichari.Web.AccountController (null) - [Error]
System.Exception: asdfaf
   在 Ichari.Web.BaseController.OnException(ExceptionContext filterContext) 位置 E:\ichari\02工程\03代码\Charity\trunk\ichari\Ichari.Web\Controller\BaseController.cs:行号 32
$$$$$$$$$$$$^^^^^^^^^^^^$$$$$$$$$$$$^^^^^^^^^^^^--------2012-06-20 13:50:16,904 [9964] FATAL Ichari.Web.CharityController (null) - [Error]
Ichari.Common.IchariException: 已经登记领奖信息：drawId=126
   在 Ichari.Web.BaseController.OnException(ExceptionContext filterContext) 位置 E:\ichari\02工程\03代码\Charity\trunk\ichari\Ichari.Web\Controller\BaseController.cs:行号 32
$$$$$$$$$$$$^^^^^^^^^^^^$$$$$$$$$$$$^^^^^^^^^^^^$$$$$$$$$$$$^^^^^^^^^^^^$$$$$$$$$$$$^^^^^^^^^^^^$$$$$$$$$$$$^^^^^^^^^^^^$$$$$$$$$$$$^^^^^^^^^^^^$$$$$$$$$$$$^^^^^^^^^^^^$$$$$$$$$$$$